# google_tts

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
examples/: list_en_us_voices.rs  list_voices.rs  simple_synthesize.rs  test_all_english_voices.rs
google_tts/: all.html  enum.AudioEncoding.html  enum.SsmlVoiceGender.html  index.html  sidebar-items.js  struct.AudioConfig.html  struct.GoogleTtsClient.html  struct.ListVoicesResponse.html  struct.TextInput.html  struct.TtsResponse.html  struct.VoiceDescription.html  struct.VoiceProps.html
google_tts/voices/: enum.EnUsVoices.html  index.html  sidebar-items.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
src/: lib.rs  voices.rs
src/google_tts/: lib.rs.html  voices.rs.html
